@@ -16,6 +16,7 @@ This project receives help from these awesome contributors:
 
 - Terje Røsten
 - Frederic Aoustin
+- Zhaolong Zhu
 
 
 Thanks
