@@ -8,10 +8,14 @@ import itertools
 
 from cli_helpers.utils import filter_dict_by_key
 from .preprocessors import (convert_to_string, truncate_string, override_missing_value,
-                            style_output, HAS_PYGMENTS, Terminal256Formatter, StringIO)
+                            style_output, HAS_PYGMENTS, Terminal256Formatter, StringIO,
+                            override_tab_value)
 
 supported_formats = ('ascii', 'double', 'github')
-preprocessors = (override_missing_value, convert_to_string, truncate_string, style_output)
+preprocessors = (
+    override_missing_value, convert_to_string, override_tab_value,
+    truncate_string, style_output
+)
 
 table_format_handler = {
     'ascii': terminaltables.AsciiTable,
